Introduce swap move and bring some standardization